# THWS-Wuerzburg

./: README.md
Algorithmen und Datenstrukturen II/_05_Graphen_Part_2/: Node.java  Tree.java
Algorithmen und Datenstrukturen II/_06_Evolutionary_Algorithmen/: GeneticAlgorithmTSP.java  Hill_Climbing_Algorithm_2.java  _06a_Bergsteiger_Algorithmus.java
Assembly/: Assembly Commands.txt  Assembly Registers x86.txt  Hello_World!.asm
Computer Networking and Cyber Security/: ACL Lab-New-Base.pkt  Computer Networking und Cyber Security - Cheeat Sheet.tex  Day1-Base Topology.pkt  Day2-Routing.pkt  FP-Initial.pkt  HSRP-With Routers-Initial (1).pkt  HSRP-With Routers-Initial.pkt  HSRP2-With MLS-Initial.pkt  NAT_PT_Lab_Practice-Initial.pkt  PT-KristianPopov_Final.pkt
DatenBanken I/SQL/: Übung 05.sql  (+1 more)
Grundlagen Algorithmen und Datenstrukturen/: Rekursion.txt  Sort-Algorithm.rkt
Systemnahe Programmierung/: Bash and C Preparation.tex  Theory of Operating System Preparation.tex
Systemnahe Programmierung/C Language/ChatGPTExercises/: CMakeLists.txt
Systemnahe Programmierung/C Language/ChatGPTExercises/FundamentalExercises/_01_Largest of Three Numbers/: main.c
Systemnahe Programmierung/C Language/ChatGPTExercises/FundamentalExercises/_02_Reverse a Number/: main.c
Systemnahe Programmierung/C Language/ChatGPTExercises/FundamentalExercises/_03_PrimeNumber/: main.c
Systemnahe Programmierung/C Language/Commands-File API-Threads-Semaphore/: CMakeLists.txt
Systemnahe Programmierung/C Language/Commands-File API-Threads-Semaphore/Threads and Semaphore/Parallel Search in an Array/: main.c
Systemnahe Programmierung/C Language/Commands-File API-Threads-Semaphore/Threads and Semaphore/ParallelSearchInAnArrayV2/: main.c
Systemnahe Programmierung/C Language/Commands-File API-Threads-Semaphore/Threads and Semaphore/Producer-Consumer Problem/: main.c
Systemnahe Programmierung/C Language/Commands-File API-Threads-Semaphore/Threads and Semaphore/SumArrayWithThreads/: main.c
Systemnahe Programmierung/C Language/Commands-File API-Threads-Semaphore/Threads and Semaphore/SumArrayWithThreadsV2/: main.c
Systemnahe Programmierung/C Language/Commands-File API-Threads-Semaphore/commands/Command Line Arguments/: main.c
Systemnahe Programmierung/C Language/Commands-File API-Threads-Semaphore/commands/simpleCalculator/: main.c
Systemnahe Programmierung/C Language/Commands-File API-Threads-Semaphore/file handling/Directory Explorer/: main.c
Systemnahe Programmierung/C Language/Commands-File API-Threads-Semaphore/file handling/File Content Search/: main.c
Systemnahe Programmierung/C Language/Commands-File API-Threads-Semaphore/file handling/File Copy/: main.c
Systemnahe Programmierung/C Language/Commands-File API-Threads-Semaphore/file handling/Word Count in a File/: main.c
Systemnahe Programmierung/C Language/Commands-File API-Threads-Semaphore/stdin and stdout/Input Reverser/: main.c
Systemnahe Programmierung/C Language/Commands-File API-Threads-Semaphore/stdin and stdout/Line counter/: main.c
Systemnahe Programmierung/C Language/File API/: CMakeLists.txt
Systemnahe Programmierung/C Language/File API/example01_ReadingFile/: main.c
Systemnahe Programmierung/C Language/File API/example02_WritingFileByCharacters/: main.c
Systemnahe Programmierung/C Language/File API/example03_ReadingFileByCharacters/: main.c
Systemnahe Programmierung/C Language/File API/example04_WritingFileByLines/: main.c
Systemnahe Programmierung/C Language/File API/example05_ReadingFileByLines/: main.c
Systemnahe Programmierung/C Language/File API/example06_PrintFileNamesInCurrentDirectory/: main.c
Systemnahe Programmierung/C Language/File API/exercise01V1/: main.c
Systemnahe Programmierung/C Language/File API/exercise01V2/: main.c
Systemnahe Programmierung/C Language/File API/exercise02/: main.c
Systemnahe Programmierung/C Language/File API/exercise03/: main.c
Systemnahe Programmierung/C Language/File API/exercise03V2/: main.c
Systemnahe Programmierung/C Language/File API/readPeopleFromFile/: main.c
Systemnahe Programmierung/C Language/Portfolio/: CMakeLists.txt
Systemnahe Programmierung/C Language/Portfolio/exams/InsertCharachterBetween/: main.c
Systemnahe Programmierung/C Language/Portfolio/strings/CompressAString/: main.c
Systemnahe Programmierung/C Language/Portfolio/strings/ExpandACompressedString/: main.c
Systemnahe Programmierung/C Language/Portfolio/strings/Permutations/: main.c
Systemnahe Programmierung/C Language/Portfolio/strings/RotateCharactersInAString/: main.c
Systemnahe Programmierung/C Language/Portfolio/task1/arraySumAndAverage/: main.c
Systemnahe Programmierung/C Language/Portfolio/task1/binarySearch/: main.c
Systemnahe Programmierung/C Language/Portfolio/task1/frequencyOfElements/: main.c
Systemnahe Programmierung/C Language/Portfolio/task1/matrixAddition/: main.c
Systemnahe Programmierung/C Language/Portfolio/task1/mergeTwoSortedArrays/: main.c
Systemnahe Programmierung/C Language/Portfolio/task2/DoubleLinkedList/: main.c
Systemnahe Programmierung/C Language/Portfolio/task2/DoubleLinkedListV2/: main.c
Systemnahe Programmierung/C Language/Portfolio/task2/Graph/: main.c
Systemnahe Programmierung/C Language/Portfolio/task2/Stack/: main.c
Systemnahe Programmierung/C Language/Threads and Semaphores/: CMakeLists.txt
Systemnahe Programmierung/C Language/Threads and Semaphores/Semaphores/example01/: main.c
Systemnahe Programmierung/C Language/Threads and Semaphores/Semaphores/example02/: main.c
Systemnahe Programmierung/C Language/Threads and Semaphores/Semaphores/example03/: main.c
Systemnahe Programmierung/C Language/Threads and Semaphores/Semaphores/example04/: main.c
Systemnahe Programmierung/C Language/Threads and Semaphores/Semaphores/exercise01_Atomic_Counter/: main.c
Systemnahe Programmierung/C Language/Threads and Semaphores/Threads/example01/: main.c
Systemnahe Programmierung/C Language/Threads and Semaphores/Threads/example02/: main.c
Systemnahe Programmierung/C Language/Threads and Semaphores/Threads/exercise01/: main.c
(+961 files in other folders)
