cmake_minimum_required(VERSION 3.29)
project(ChatGPTExercises C)

set(CMAKE_C_STANDARD 11)

add_executable(largest "FundamentalExercises/_01_Largest of Three Numbers/main.c")
add_executable(reverseANumber "FundamentalExercises/_02_Reverse a Number/main.c")
add_executable(prime "FundamentalExercises/_03_PrimeNumber/main.c")
